@@ -14,18 +14,18 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-
 package org.apache.arrow.vector;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertSame;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertSame;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
 import java.util.Map;
-
 import org.apache.arrow.memory.ArrowBuf;
 import org.apache.arrow.memory.BufferAllocator;
 import org.apache.arrow.vector.complex.MapVector;
@@ -37,23 +37,24 @@ import org.apache.arrow.vector.complex.writer.BaseWriter.ListWriter;
 import org.apache.arrow.vector.complex.writer.BaseWriter.MapWriter;
 import org.apache.arrow.vector.types.Types.MinorType;
 import org.apache.arrow.vector.types.pojo.ArrowType;
+import org.apache.arrow.vector.types.pojo.Field;
 import org.apache.arrow.vector.types.pojo.FieldType;
 import org.apache.arrow.vector.util.JsonStringArrayList;
 import org.apache.arrow.vector.util.TransferPair;
-import org.junit.After;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
 public class TestMapVector {
 
   private BufferAllocator allocator;
 
-  @Before
+  @BeforeEach
   public void init() {
     allocator = new DirtyRootAllocator(Long.MAX_VALUE, (byte) 100);
   }
 
-  @After
+  @AfterEach
   public void terminate() throws Exception {
     allocator.close();
   }
@@ -90,7 +91,7 @@ public class TestMapVector {
         mapReader.setPosition(i);
         for (int j = 0; j < i + 1; j++) {
           mapReader.next();
-          assertEquals("record: " + i, j, mapReader.key().readLong().longValue());
+          assertEquals(j, mapReader.key().readLong().longValue(), "record: " + i);
           assertEquals(j, mapReader.value().readInteger().intValue());
         }
       }
@@ -136,7 +137,7 @@ public class TestMapVector {
           } else {
             for (int j = 0; j < i + 1; j++) {
               mapReader.next();
-              assertEquals("record: " + i, j, mapReader.key().readLong().longValue());
+              assertEquals(j, mapReader.key().readLong().longValue(), "record: " + i);
               if (i == 5) {
                 assertFalse(mapReader.value().isSet());
               } else {
@@ -152,7 +153,7 @@ public class TestMapVector {
   @Test
   public void testCopyFrom() throws Exception {
     try (MapVector inVector = MapVector.empty("input", allocator, false);
-         MapVector outVector = MapVector.empty("output", allocator, false)) {
+        MapVector outVector = MapVector.empty("output", allocator, false)) {
       UnionMapWriter writer = inVector.getWriter();
       writer.allocate();
 
@@ -194,12 +195,11 @@ public class TestMapVector {
 
       // assert the output vector is correct
       FieldReader reader = outVector.getReader();
-      assertTrue("shouldn't be null", reader.isSet());
+      assertTrue(reader.isSet(), "shouldn't be null");
       reader.setPosition(1);
-      assertFalse("should be null", reader.isSet());
+      assertFalse(reader.isSet(), "should be null");
       reader.setPosition(2);
-      assertTrue("shouldn't be null", reader.isSet());
-
+      assertTrue(reader.isSet(), "shouldn't be null");
 
       /* index 0 */
       Object result = outVector.getObject(0);
@@ -335,8 +335,8 @@ public class TestMapVector {
 
       /* check the vector output */
       int index = 0;
-      int offset = 0;
-      Map<?, ?> result = null;
+      int offset;
+      Map<?, ?> result;
 
       /* index 0 */
       assertFalse(mapVector.isNull(index));
@@ -455,20 +455,26 @@ public class TestMapVector {
           StructVector dataVector1 = (StructVector) toVector.getDataVector();
 
           for (int i = 0; i < splitLength; i++) {
-            dataLength1 = offsetBuffer.getInt((start + i + 1) * MapVector.OFFSET_WIDTH) -
-                    offsetBuffer.getInt((start + i) * MapVector.OFFSET_WIDTH);
-            dataLength2 = toOffsetBuffer.getInt((i + 1) * MapVector.OFFSET_WIDTH) -
-                    toOffsetBuffer.getInt(i * MapVector.OFFSET_WIDTH);
+            dataLength1 =
+                offsetBuffer.getInt((start + i + 1) * MapVector.OFFSET_WIDTH)
+                    - offsetBuffer.getInt((start + i) * MapVector.OFFSET_WIDTH);
+            dataLength2 =
+                toOffsetBuffer.getInt((i + 1) * MapVector.OFFSET_WIDTH)
+                    - toOffsetBuffer.getInt(i * MapVector.OFFSET_WIDTH);
 
-            assertEquals("Different data lengths at index: " + i + " and start: " + start,
-                    dataLength1, dataLength2);
+            assertEquals(
+                dataLength1,
+                dataLength2,
+                "Different data lengths at index: " + i + " and start: " + start);
 
             offset1 = offsetBuffer.getInt((start + i) * MapVector.OFFSET_WIDTH);
             offset2 = toOffsetBuffer.getInt(i * MapVector.OFFSET_WIDTH);
 
             for (int j = 0; j < dataLength1; j++) {
-              assertEquals("Different data at indexes: " + offset1 + " and " + offset2,
-                      dataVector.getObject(offset1), dataVector1.getObject(offset2));
+              assertEquals(
+                  dataVector.getObject(offset1),
+                  dataVector1.getObject(offset2),
+                  "Different data at indexes: " + offset1 + " and " + offset2);
 
               offset1++;
               offset2++;
@@ -571,18 +577,18 @@ public class TestMapVector {
       assertEquals(1L, getResultKey(resultStruct));
       ArrayList<Long> list = (ArrayList<Long>) getResultValue(resultStruct);
       assertEquals(3, list.size()); // value is a list with 3 elements
-      assertEquals(new Long(50), list.get(0));
-      assertEquals(new Long(100), list.get(1));
-      assertEquals(new Long(200), list.get(2));
+      assertEquals(Long.valueOf(50), list.get(0));
+      assertEquals(Long.valueOf(100), list.get(1));
+      assertEquals(Long.valueOf(200), list.get(2));
 
       // Second Map entry
       resultStruct = (Map<?, ?>) resultSet.get(1);
       list = (ArrayList<Long>) getResultValue(resultStruct);
       assertEquals(4, list.size()); // value is a list with 4 elements
-      assertEquals(new Long(75), list.get(0));
-      assertEquals(new Long(125), list.get(1));
-      assertEquals(new Long(150), list.get(2));
-      assertEquals(new Long(175), list.get(3));
+      assertEquals(Long.valueOf(75), list.get(0));
+      assertEquals(Long.valueOf(125), list.get(1));
+      assertEquals(Long.valueOf(150), list.get(2));
+      assertEquals(Long.valueOf(175), list.get(3));
 
       // Get mapVector element at index 1
       result = mapVector.getObject(1);
@@ -593,24 +599,24 @@ public class TestMapVector {
       assertEquals(3L, getResultKey(resultStruct));
       list = (ArrayList<Long>) getResultValue(resultStruct);
       assertEquals(1, list.size()); // value is a list with 1 element
-      assertEquals(new Long(10), list.get(0));
+      assertEquals(Long.valueOf(10), list.get(0));
 
       // Second Map entry
       resultStruct = (Map<?, ?>) resultSet.get(1);
       assertEquals(4L, getResultKey(resultStruct));
       list = (ArrayList<Long>) getResultValue(resultStruct);
       assertEquals(2, list.size()); // value is a list with 1 element
-      assertEquals(new Long(15), list.get(0));
-      assertEquals(new Long(20), list.get(1));
+      assertEquals(Long.valueOf(15), list.get(0));
+      assertEquals(Long.valueOf(20), list.get(1));
 
       // Third Map entry
       resultStruct = (Map<?, ?>) resultSet.get(2);
       assertEquals(5L, getResultKey(resultStruct));
       list = (ArrayList<Long>) getResultValue(resultStruct);
       assertEquals(3, list.size()); // value is a list with 1 element
-      assertEquals(new Long(25), list.get(0));
-      assertEquals(new Long(30), list.get(1));
-      assertEquals(new Long(35), list.get(2));
+      assertEquals(Long.valueOf(25), list.get(0));
+      assertEquals(Long.valueOf(30), list.get(1));
+      assertEquals(Long.valueOf(35), list.get(2));
 
       /* check underlying bitVector */
       assertFalse(mapVector.isNull(0));
@@ -806,7 +812,8 @@ public class TestMapVector {
       // populate map vector with the following two records
       // [
       //    [[5: 10, 20: 40]:[50: 100, 200: 400], [50: 100]:[75: 175, 150: 250]],
-      //    [[1: 2]:[10: 20], [30: 40]:[15: 20], [50: 60, 70: null]:[25: 30, 35: null], [5: null]: null]
+      //    [[1: 2]:[10: 20], [30: 40]:[15: 20], [50: 60, 70: null]:[25: 30, 35: null], [5: null]:
+      // null]
       // ]
 
       mapWriter.setPosition(0);
@@ -1012,8 +1019,8 @@ public class TestMapVector {
       final ArrowBuf offsetBuffer = mapVector.getOffsetBuffer();
 
       /* mapVector has 2 entries at index 0 and 4 entries at index 1 */
-      assertEquals(0, offsetBuffer.getInt(0 * MapVector.OFFSET_WIDTH));
-      assertEquals(2, offsetBuffer.getInt(1 * MapVector.OFFSET_WIDTH));
+      assertEquals(0, offsetBuffer.getInt(0));
+      assertEquals(2, offsetBuffer.getInt(MapVector.OFFSET_WIDTH));
       assertEquals(6, offsetBuffer.getInt(2 * MapVector.OFFSET_WIDTH));
     }
   }
@@ -1177,5 +1184,24 @@ public class TestMapVector {
       assertSame(toVector.getField(), mapVector.getField());
       toVector.clear();
     }
+  }
+
+  @Test
+  public void testMakeTransferPairPreserveNullability() {
+    Field intField = new Field("int", FieldType.notNullable(MinorType.INT.getType()), null);
+    List<Field> fields = Collections.singletonList(intField);
+    Field structField =
+        new Field("struct", FieldType.notNullable(ArrowType.Struct.INSTANCE), fields);
+    Field structField2 =
+        new Field("struct", FieldType.notNullable(ArrowType.Struct.INSTANCE), fields);
+    FieldVector vec = structField.createVector(allocator);
+
+    TransferPair tp = vec.getTransferPair(structField2, allocator);
+    tp.transfer();
+
+    FieldVector res = (FieldVector) tp.getTo();
+
+    assertEquals(intField, vec.getField().getChildren().get(0));
+    assertEquals(intField, res.getField().getChildren().get(0));
   }
 }
